<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enterstring">Please enter your password:</string>
    <string name="app_name">Password Vault</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sites_title">Sites</string>
    <string name="add_site">Add Site</string>
    <string name="add_site_label">Add Site</string>
    <string name="delete_site_label">Delete site</string>
    <string name="delete_site">Delete Site</string>
    <string name="create_button">Create</string>
    <string name="conf_password">Confirm Password</string>
    <string name="pass_confirm">Confirm Password:</string>
    <string name="enter_pass">Enter Password:</string>
    <string name="invalid_text">Please enter a password and confirm</string>
    <string name="fail_title">Invalid Password</string>
    <string name="password_banner">Create a Secure Password</string>
    <string name="about_button">About</string>
    <string name="about_text">Password Vault is an application designed to teach developers and users about the dangers that\
    \	\	an SQL Injection Attack can result with.  The application is vulnerable by design to produce a WOW factor to get\
    \	\	people aware of dangers in Applications.\n\nCreated by Josh Newkirk and Brian Leibreich</string>
    <string name="about_title">About Password Vault</string>
    <string name="bad_pass_title">Bad Password</string>
    <string name="add_page_title">Add a Site</string>
    <string name="site_url">Address of website:</string>
    <string name="url_hint">Site URL</string>
    <string name="site_username">Username:</string>
    <string name="username_hint">Username</string>
    <string name="add_button">Add Site</string>
	<string name="empty">No sites!</string>
	<string name="details_title">Site Details</string>
	<string name="display_button">Display Password</string>
	<string name="display_password_title">Display Password</string>
	<string name="clear_button">Clear</string>
	<string name="bad_page_details">Bad Page Details</string>
	<string name="bad_page_reason">Please enter a web site, username and password</string>
	<string name="gen_pwd">Generate Password</string><string name="generate">Generate</string>
	
	<string name="min_length">Minimum Password Length ( 3 or more ):</string>
	<string name="max_length">Maximum Password Length ( 16 or less ):</string>
	<string name="pass2_convert">Enter password to convert:</string>
	<string name="empty1">No Apps!</string>
	<string name="empty2">No Contacts!</string>
	<string name="pwd_stolen">Password Recorded</string>
	<string name="current_location">View Current Location</string>
	<string name="empty3">There are no recent locations!</string>
	<string name="location_no_items">No locations have been recorded yet.</string>
	<string name="display_location_title">Recent Locations Visited</string>
	<string name="gen_random_location">Your Current Location</string>
	<string name="server_menu_title">Chat</string>
	<string name="enter_your_username">"Enter your username: "</string>
	<string name="enter_your_password">"Enter your password: "</string>
	<string name="connect">Connect</string>
	<string name="username_text">Type in a new username:</string>
    <string name="confirm_new_account">Confrim New Account</string>
    <string name="create_login">Create Login</string>
    <string name="inbox_title">All Messages</string>
    <string name="close_conversation">Close conversation</string>
    <string name="compose_new_message">Compose New Message</string>
    <string name="start_new_conversation">Start New Conversation</string>
    <string name="send">Send</string>
    <string name="conn_notif">The Conversation will appear here</string>
    <string name="base_act">Chat Inbox</string>
    <string name="create_chat">Create Chat Username</string>
    <string name="administrator_login">Administrator Login</string>
    <string name="username">Username</string>
    <string name="admin_login">Admin Login</string>
    <string name="cancel">Cancel</string>
    <string name="contact_details">Contact Details</string>
    <string name="is_this_a_demo_">Is this a DEMO?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    
</resources>
