<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<LinearLayout
		android:orientation="vertical"
	  	android:layout_width="300dp"
	  	android:layout_height="wrap_content"
	  	android:gravity="center"
	  	android:padding="10dp" >
	    <EditText
	    	android:id="@+id/login_username"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:lines="1"
			android:inputType="text"
			android:imeOptions="actionGo"
			android:hint="@string/username" 
		/>
		<EditText
	    	android:id="@+id/login_password"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:lines="1"
			android:inputType="textPassword"
			android:imeOptions="actionGo"
			android:hint="@string/password" 
		/>
		<TextView 
		    android:id="@+id/errorText"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content" 
	    	android:textColor="#F00"
	    	android:gravity="center"
	    	android:visibility="invisible"
	    />
		<LinearLayout
		android:orientation="horizontal"
	  	android:layout_width="300dp"
	  	android:layout_height="wrap_content"
	  	android:gravity="center" >
			<Button 
				android:id="@+id/login_button"
				android:layout_marginTop="10dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/login_button"
				android:onClick="onLogin"
				android:layout_weight="1" />
			<Button 
				android:id="@+id/cancel_button"
				android:layout_marginTop="10dp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:onClick="onCancel"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>